# swansong-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analysis-and-laboratories.md  cli.md  framework-feedback-loop.md  gameplay-primitives.md  getting-started.md  input-gestures.md  manifest.md  release-notes-0.3.0.md  release-notes-0.3.1.md  release-notes-0.4.0.md  release-notes-0.5.0.md  supply-chain.md  swansong-desktop-integration.md  trace-and-outcomes.md  visual-authoring.md  wwgp-design-lessons.md
examples/canaries/daybreak-ledger/: Makefile  README.md  daybreak_ledger.ws  swan.toml
examples/canaries/daybreak-ledger/src/: diagnostic_art.h  game.c  model.h
examples/canaries/daybreak-ledger/tests/host/: test_model.c
examples/canaries/daybreak-ledger/tests/outcomes/: failure.json  interaction.json  neutral.json  reset.json  success.json
examples/canaries/daybreak-ledger/tests/play/: failure.json  reset.json  success.json
examples/canaries/dewdrop-dash/: .gitignore  ART_PROVENANCE.md  Makefile  README.md  swan.toml
examples/canaries/dewdrop-dash/assets/audio/: theme.toml
examples/canaries/dewdrop-dash/src/: game.c  model.c  model.h
examples/canaries/dewdrop-dash/tests/host/: test_model.c
examples/canaries/dewdrop-dash/tests/play/: failure.json  reset.json  success.json
examples/canaries/signal-orchard/: ART_PROVENANCE.md  Makefile  README.md  swan.toml
examples/canaries/signal-orchard/src/: game.c  model.c  model.h
examples/canaries/signal-orchard/tests/host/: test_model.c
examples/canaries/signal-orchard/tests/play/: failure.json  interaction.json  reset.json  success.json
examples/canaries/tidewheel-traverse/: .gitignore  ART_PROVENANCE.md  Makefile  README.md  swan.toml  tidewheel_traverse.ws
examples/canaries/tidewheel-traverse/src/: game.c  model.c  model.h
examples/lantern-circuit/: Makefile  README.md  swan.toml
examples/lantern-circuit/src/: game.c  model.c  model.h
examples/lantern-circuit/tests/play/: failure.json  interaction.json  neutral.json  reset.json  success.json
examples/minimal/: swan.toml
examples/tideglass-relay/: Makefile  README.md  swan.toml
examples/tideglass-relay/src/: game.c  model.c  model.h
examples/tideglass-relay/tests/host/: test_model.c
examples/tideglass-relay/tests/play/: interaction.json  reset.json
include/swan/: animation.h  assets.h  audio.h  camera.h  collision.h  core.h  debug.h  gfx.h  grid.h  input.h  legacy.h  motion.h  path.h  pool.h  random.h  records.h  rtc.h  save.h  scene.h  score.h  state.h  swan.h  tile_grid.h  timing.h  types.h  version.h  wswan.h
mk/: runtime-library.mk  swansong-runtime.mk
python/swansong_sdk/: __init__.py  asset_import.py  audio_workbench.py  authoring.py  authoring_codegen.py  budget_history.py  cli.py  evidence.py  fuzzing.py  generator.py  identity.py  laboratory.py  layout.py  manifest.py  migration.py  minimize.py  operations.py  optimize.py  plans.py  png2bpp.py  profiler.py  provenance.py  replay.py  scaffold.py  scenario.py  scenario_script.py  swansong.py  trace.py
schema/: asset-import-report.schema.json  asset-optimization-apply.schema.json  asset-optimization-revert.schema.json  audio-workbench-report.schema.json  author-audio.schema.json  author-collision.schema.json  author-handoff.schema.json  author-operation-report.schema.json  author-palette.schema.json  author-scene-flow.schema.json  author-sprites.schema.json  author-tilemap.schema.json  authoring-compilation-report.schema.json  budget-diff-report.schema.json  deterministic-trace.schema.json  failure-predicate.schema.json  frame-input-plan.schema.json  input-graph.schema.json  migration-report.schema.json  minimize-report.schema.json  replay-checkpoints.schema.json  replay-report.schema.json  scenario-compile-report.schema.json  scenario-outcome-contract.schema.json  scenario-outcome-report.schema.json  scenario-script.schema.json  sfx-arbitration-report.schema.json  swan.schema.json
src/: animation.c  assets.c  audio.c  camera.c  collision.c  core.c  debug.c  gfx.c  grid.c  input.c  legacy.c  motion.c  path.c  platform_wonderswan.c  pool.c  random.c  records.c  rtc.c  runtime_internal.h  save.c  scene.c  score.c  state.c  tile_grid.c  timing.c  wswan_keys.c  wswan_rtc.c  wswan_storage.c
templates/arcade-action/: swan.toml.tmpl
templates/arcade-action/src/: game.c.tmpl  model.h.tmpl
templates/arcade-action/tests/play/: failure.json.tmpl
templates/common/: Makefile.tmpl  README.md.tmpl
templates/common/tests/play/: failure.json.tmpl  interaction.json.tmpl  reset.json.tmpl  success.json.tmpl
templates/grid-tactics/: swan.toml.tmpl
templates/grid-tactics/src/: game.c.tmpl  model.h.tmpl
templates/grid-tactics/tests/host/: test_model.c.tmpl
templates/grid-tactics/tests/play/: failure.json.tmpl  interaction.json.tmpl  reset.json.tmpl  success.json.tmpl
templates/menu-puzzle/: swan.toml.tmpl
templates/menu-puzzle/src/: game.c.tmpl  model.c.tmpl  model.h.tmpl
templates/menu-puzzle/tests/host/: test_model.c.tmpl
templates/menu-puzzle/tests/play/: failure.json.tmpl  success.json.tmpl
templates/utility-app/: README.md.tmpl  swan.toml.tmpl
templates/utility-app/assets/audio/: commit.toml.tmpl
templates/utility-app/src/: game.c.tmpl  model.c.tmpl  model.h.tmpl
templates/utility-app/tests/play/: failure.json.tmpl  interaction.json.tmpl  neutral.json.tmpl  reset.json.tmpl  success.json.tmpl
tests/c/: Makefile  gameplay_tests.c  playtest-gfx-invalidation.json  playtest-neutral.json  runtime_tests.c  trace_disabled.c  wfconfig-sram.toml  wfconfig.toml  wswan-smoke.mk  wswan-sram-smoke.mk  wswan_smoke_game.c
tests/python/: test_analysis.py  test_authoring.py  test_authoring_codegen.py  test_canaries.py  test_cli.py  test_generator.py  test_manifest.py  test_operations.py  test_plans.py  test_png2bpp.py  test_provenance.py  test_sdk_05_tools.py  test_swansong.py  test_tool_cli.py  test_trace.py  test_visual_authoring.py
tools/: canary_gate.py
(+6 files in other folders)
